--- a/plugins/glib/pubspec.yaml
+++ b/plugins/glib/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   http: ^0.12.1
   path_provider: ^1.6.9
   flutter_cache_manager: ^1.4.2
+  webview_flutter: '>=2.0.0'
+  webview_cookie_manager: ^1.0.8
+  yaml: ">=2.0.0"
 
 dev_dependencies:
 #  flutter_test:
