--- a/plugins/kuma_player/pubspec.yaml
+++ b/plugins/kuma_player/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   positioned_tap_detector: ^1.0.3
   path: ^1.7.0
+  wakelock: ^0.4.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
