--- a/plugins/glib/pubspec.yaml
+++ b/plugins/glib/pubspec.yaml
@@ -11,12 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   ffi: ^0.1.3
-  http: ^0.12.1
   path_provider: ^1.6.9
   flutter_cache_manager: ^1.4.2
   webview_flutter: '>=2.0.0'
   webview_cookie_manager: ^1.0.8
   yaml: ">=2.0.0"
+  dio: ^3.0.10
+  dio_http2_adapter: ^1.0.1
 
 dev_dependencies:
 #  flutter_test:
