--- a/plugins/kuma_player/pubspec.yaml
+++ b/plugins/kuma_player/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   video_player: ^2.0.1
   http_multi_server: ^2.2.0
   shelf: ^0.7.9
-  http: ^0.12.1
   path_provider: ^1.6.9
   crypto: ^2.1.5
   mime: ^0.9.7
@@ -21,6 +20,9 @@ dependencies:
   positioned_tap_detector: ^1.0.3
   path: ^1.7.0
   wakelock: ^0.4.0-nullsafety.0
+  dio: ^3.0.10
+  dio_http2_adapter: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
