--- a/plugins/flutter_svg_provider/pubspec.yaml
+++ b/plugins/flutter_svg_provider/pubspec.yaml
@@ -1,57 +1,38 @@
-name: glib
-description: A new Flutter plugin.
-version: 0.0.1
-author:
-homepage:
+name: flutter_svg_provider
+description: Generate image provider from svg path, use flutter_svg as a dependency.
+version: 0.1.6
+homepage: https://github.com/yang-f/flutter_svg_provider
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.7.0 <3.0.0'
+  flutter: '>=1.17.0 <2.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  ffi: ^0.1.3
-  path_provider: ^1.6.9
-  flutter_cache_manager: '>=1.4.2'
-  webview_flutter: '>=2.0.0'
-  webview_cookie_manager: ^1.0.8
-  yaml: ">=2.0.0"
-  dio: ^4.0.0
-  dio_http2_adapter:
-    path: "../http2_adapter"
+  flutter_svg: ^0.19.3
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
-  plugin:
-    androidPackage: com.qlp.glib
-    pluginClass: GlibPlugin
-
-  assets:
-    - res/cacert.pem
-
-  # To add assets to your plugin package, add an assets section, like this:
+  # To add assets to your package, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your plugin package, add a fonts section here,
+  # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
