--- a/plugins/gitissues/pubspec.yaml
+++ b/plugins/gitissues/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   crypto: ^2.1.5
   convert: ^2.1.1
-  http: ^0.12.2
+  dio: ^4.0.0
   webview_flutter: ^2.0.1
   flutter_spinkit: ^4.1.2
 
