--- a/plugins/kuma_player/pubspec.yaml
+++ b/plugins/kuma_player/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.0.1
   http_multi_server: ^2.2.0
-  shelf: ^0.7.9
+  shelf: '>=0.7.9'
   path_provider: ^1.6.9
   crypto: ^2.1.5
   mime: ^0.9.7
@@ -20,8 +20,9 @@ dependencies:
   positioned_tap_detector: ^1.0.3
   path: ^1.7.0
   wakelock: ^0.4.0-nullsafety.0
-  dio: ^3.0.10
-  dio_http2_adapter: ^1.0.1
+  dio: ^4.0.0
+  dio_http2_adapter:
+    path: "../http2_adapter"
 
 
 dev_dependencies:
