fixed http2 bug

--- a/android/app/src/main/assets/debug/project/config.json
+++ b/android/app/src/main/assets/debug/project/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "javfull.net",
-    "url": "https://javfull.net/",
+    "name": "agefans",
+    "url": "https://agefans.org",
     "index": "index.js",
     "collections": [
         "details.js",
@@ -9,19 +9,24 @@
     "search": {
         "src": "search.js",
         "data": {
-            "url": "https://javfull.net/{1}?s={0}"
+            "url": "https://agefans.org/search?q={0}&page={1}"
         }
     },
     "categories": [
         {
-            "title": "Home",
+            "title": "首页",
             "id": "home",
-            "url": "https://javfull.net/page/{0}/"
-        }, 
+            "url": "https://agefans.org/"
+        },
         {
-            "title": "Top",
-            "id": "top",
-            "url": "https://javfull.net/top-jav-movies-this-month/"
+            "title": "新番/更新",
+            "id": "lastest",
+            "url": "https://agefans.org/latest"
+        },
+        {
+            "title": "补番推荐",
+            "id": "bufan",
+            "url": "https://agefans.org/bufan?page={0}"
         }
     ]
 }
