--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sembast: ^3.1.0
   decorated_icon: ^1.2.1
   dio: ^4.0.0
+  audio_video_progress_bar: ^0.9.0
 
 dev_dependencies:
   flutter_test:
