--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   decorated_icon: ^1.2.1
   dio: ^4.0.0
   audio_video_progress_bar: ^0.9.0
+  reorderables: ^0.4.1
 
 dev_dependencies:
   flutter_test:
