--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.9+13
+version: 2.0.0+14
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -37,8 +37,6 @@ dependencies:
   dio: ^4.0.0
   audio_video_progress_bar: ^0.9.0
   reorderables: ^0.4.1
-  neo_video_player:
-    path: plugins/neo_video_player
   xml: ^5.1.2
   yaml: ^3.1.0
   jdenticon_dart: ^2.0.0
@@ -48,6 +46,11 @@ dependencies:
   get_version:
     git: https://github.com/fluttercommunity/get_version.git
   flutter_picker: ^2.0.2
+#  neo_video_player:
+#    path: plugins/neo_video_player
+  video_player: ^2.2.3
+  browser_webview:
+    path: plugins/browser_webview
 
 dev_dependencies:
   flutter_test:
